fix: UI adjustment on tablet view

--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -3,7 +3,7 @@
     position: relative;
 
     h3:not(:last-child) {
-        margin-bottom: 5px;
+        margin-bottom: 15px;
     }
 
     @media screen and (max-width: 768px) {
@@ -53,5 +53,9 @@
 
     @media screen and (max-width: 768px) {
         aspect-ratio: 350/100;
+
+        p {
+            font-size: 0.8rem;
+        }
     }
 }
