--- a/src/components/NewsSection/styles.module.scss
+++ b/src/components/NewsSection/styles.module.scss
@@ -3,6 +3,13 @@
 
     h3 {
         font-size: 20px;
+
+        @media screen and (max-width: 1080px) {
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+        }
     }
 }
 
@@ -13,7 +20,7 @@
     justify-content: flex-end;
     align-items: flex-end;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1080px) {
         width: 100%;
         justify-content: space-between;
     }
@@ -31,8 +38,7 @@
         width: calc(50% - 15px);
     }
 
-    @media screen and (max-width: 768px) {
-        font-size: 1.5rem;
+    @media screen and (max-width: 1080px) {
         flex-wrap: wrap;
         margin-bottom: 25px;
 
@@ -69,11 +75,111 @@
 
 .topStories {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, 138px);
+    grid-template-columns: 1fr;
     gap: 30px;
 
-    @media only screen and (min-width: 768px) {
+    h3 {
+        margin-bottom: 10px;
+    }
+
+    @media screen and (min-width: 768px) {
+        grid-template-columns: 1fr 1fr;
+
+        > div {
+            aspect-ratio: 1/1;
+        }
+
+        p {
+            font-size: 0.8rem;
+        }
+    }
+
+    @media screen and (min-width: 1024px) {
+        grid-template-columns: repeat(9, 1fr);
+
+        > div {
+            aspect-ratio: unset;
+
+            &:first-child {
+                grid-column: span 6;
+                grid-row: span 3;
+
+                > :global(div) {
+                    height: 138px;
+
+                    h3 {
+                        font-size: 1.5rem;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                    }
+                }
+            }
+
+            &:nth-child(2),
+            &:nth-child(3) {
+                grid-row: span 2;
+
+                > :global(div) {
+                    aspect-ratio: 255/107;
+
+                    h3 {
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 3;
+                    }
+                }
+            }
+
+            &:nth-child(2),
+            &:nth-child(3),
+            &:nth-child(4),
+            &:nth-child(5) {
+                grid-column: span 3;
+
+                h3 {
+                    line-height: 1.5;
+                }
+
+                p {
+                    display: none;
+                }
+            }
+
+            &:nth-child(6),
+            &:nth-child(7),
+            &:nth-child(8) {
+                grid-column: span 3;
+                grid-row: span 2;
+                aspect-ratio: 1/1;
+
+                h3 {
+                    font-size: 1rem;
+                    line-height: 1.4;
+                    margin-bottom: 8px;
+                    overflow: hidden;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 1;
+                    -webkit-box-orient: vertical;
+                }
+
+                p {
+                    font-size: 0.8rem;
+                }
+
+                > :global(div) {
+                    height: calc(134 / 347 * 100%);
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(6, 138px);
+
         > div {
             &:first-child {
                 grid-column: span 6;
@@ -145,6 +251,10 @@
                     font-size: 1.3rem;
                     line-height: 1.4;
                     margin-bottom: 8px;
+                    overflow: hidden;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
                 }
 
                 > :global(div) {
@@ -152,19 +262,5 @@
                 }
             }
         }
-    }
-
-    @media only screen and (max-width: 768px) {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto;
-        gap: 15px;
-
-        p {
-            display: none;
-        }
-    }
-
-    @media only screen and (max-width: 480px) {
-        grid-template-columns: 1fr;
     }
 }
